# bfu_labs_pm_course2

alg/: README.md
alg/laba10/: laba10.py
alg/laba11/: laba11.py
alg/laba12/: laba11.py  laba12.py
alg/laba13/: laba13.py
alg/laba14/: laba14.py
alg/laba2/: laba2.cpp
alg/laba3/: CMakeLists.txt  laba3.cpp
alg/laba4/: laba4.py
alg/laba6/: laba6.py
alg/laba7/: laba7.py
alg/labs15-17/: labs15-17.py
alg/sem_3/: laboratory conditions.docx
alg/sem_3/laba1/: CMakeLists.txt  laba1.cpp
alg/sem_3/laba12/: example0.txt  example1.txt
alg/sem_3/laba13/: laba13.py
alg/sem_3/laba14/: example.txt
alg/sem_3/laba2/: CMakeLists.txt  laba2.cpp
alg/sem_3/laba2/inc/: brackets.h
alg/sem_3/laba2/src/: brackets.cpp
alg/sem_3/laba5/: laba5.py
alg/sem_3/laba8/: laba8.py
alg/sem_3/laba9/: laba9.py
alg/sem_4/: README.md  conditions_sem2.docx
alg/sem_4/lab1/: lab1.py
alg/sem_4/lab10/: main.py
alg/sem_4/lab11/: input.txt  main.py
alg/sem_4/lab12/: input_t.txt  main.py
alg/sem_4/lab13/: main.py
alg/sem_4/lab14/: main.py
alg/sem_4/lab15/: input.txt  main.py  temp.txt
alg/sem_4/lab16/: input.txt  main.py
alg/sem_4/lab17/: main.py
alg/sem_4/lab18/: main.py
alg/sem_4/lab2/: lab2.py
alg/sem_4/lab3/: lab3.py
dis_math/lab2/: task1.py  task2.py
dis_math/lab5/: lab5.py
dis_math/lab6/: input.txt  main.py
dis_math/lab7/: main.py
dis_math/lab8/: main.py  network.txt
dis_math/lab9/: dis_lab8.py  graph.txt  main.py
web/: README.md
web/lab0/: lab0_1.html  lab0_2.html
web/lab1/: docker-compose.yml
web/lab2/: site.conf
(+10 files in other folders)
